--- a/apps/homepage/package.json
+++ b/apps/homepage/package.json
@@ -8,21 +8,39 @@
     "preview": "astro preview",
     "deploy:dev": "wrangler deploy --env dev",
     "deploy:staging": "wrangler deploy --env staging",
-    "deploy:production": "wrangler deploy --env production"
+    "deploy:production": "wrangler deploy --env production",
+    "test": "vitest run",
+    "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:dev": "./run-e2e-dev.sh",
+    "test:e2e:dev:ui": "./run-e2e-dev.sh --ui"
   },
   "dependencies": {
     "@astrojs/cloudflare": "^11.0.0",
     "@astrojs/tailwind": "^5.1.2",
     "@auth0/auth0-spa-js": "^2.1.3",
-    "@lexara/shared-types": "workspace:*",
-    "@lexara/shared-utils": "workspace:*",
     "@tailwindcss/forms": "^0.5.7",
     "astro": "^4.16.7",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240909.0",
+    "@playwright/test": "^1.53.2",
+    "@types/node": "^20.11.0",
+    "@vitest/coverage-v8": "^1.2.0",
+    "@vitest/ui": "^1.2.0",
+    "axe-playwright": "^2.0.1",
+    "dotenv": "^16.3.1",
+    "playwright": "^1.53.2",
     "typescript": "^5.5.0",
+    "vitest": "^1.2.0",
     "wrangler": "^4.20.3"
   }
 }
